# testrunner

Fluentd/: .gitignore  Fluentd.sln  docker-compose.yml
Hasura/: docker-compose.yml
IstioTest/: IstioTest.sln  README.md  deploy.ps1  docker-compose.yml
RedisCache/: RedisCache.sln
agenttest/: helper.py  main.py  requirements.txt
agenttest2/: blogwriter.py  outline_agent.py
agenttest3/: code_agent.py  image_generator_agent.py  main.py  review_agent.py  search_agent.py  storybuilder_agent.py
browseragent/: README_DESKTOP.md  logging_config.py  main.py  main_desktop.py  performance_test.py  pyproject.toml  setup_playwright.py  test_auth_blocking.py  test_auth_suppression.py  test_browser_sizing.py  test_browser_use_auth.py  test_cloud_blocking.py  test_playwright_agent.py  test_simple_auth_block.py
browseragent/backup/: main_backup_20241219.py  pyproject_backup_20241219.toml
browseragent/core/: __init__.py  agent_runner.py  click_tool.py  playwright_agent_runner.py  type_text_tool.py
browseragent/ui/: __init__.py  main_window.py
browseragent/ui/widgets/: __init__.py  progress_widget.py  results_viewer.py  task_input.py
browseragent/utils/: __init__.py  network_blocker.py  rate_limiter.py
browseragent2/: .env  README.md  automation_config.json  main.py  pyproject.toml  run_automation.py
datascience/: excercise2.py  main.py  pyproject.toml
firebase1/: .gitignore  README.md  firebase-config-example.js  package.json
javaworld/: pom.xml
kedatest/: loadtest.js  nginx-deployment.yaml  nginx-scaledobject.yaml
performance/: performance.sln
(+67 files in other folders)
